<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>GlobalPropertyWidget</class>
 <widget class="QWidget" name="GlobalPropertyWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>700</width>
    <height>335</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="QLabel" name="familyLabel">
     <property name="text">
      <string>Family:</string>
     </property>
    </widget>
   </item>
   <item row="0" column="3">
    <widget class="QDoubleSpinBox" name="tagSizeEdit">
     <property name="toolTip">
      <string>Sets the default tag size for all identifications</string>
     </property>
     <property name="statusTip">
      <string>Sets the default tag size for all identifications</string>
     </property>
     <property name="minimum">
      <double>0.100000000000000</double>
     </property>
     <property name="maximum">
      <double>10.000000000000000</double>
     </property>
     <property name="singleStep">
      <double>0.100000000000000</double>
     </property>
     <property name="value">
      <double>1.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="authorLabel">
     <property name="text">
      <string>Author:</string>
     </property>
     <property name="buddy">
      <cstring>authorEdit</cstring>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="nameLabel">
     <property name="text">
      <string>Name:</string>
     </property>
     <property name="buddy">
      <cstring>nameEdit</cstring>
     </property>
    </widget>
   </item>
   <item row="0" column="2">
    <widget class="QLabel" name="tagSizeLabel">
     <property name="text">
      <string>Tag Size (mm):</string>
     </property>
     <property name="buddy">
      <cstring>tagSizeEdit</cstring>
     </property>
    </widget>
   </item>
   <item row="9" column="0" colspan="4">
    <widget class="QPlainTextEdit" name="commentEdit">
     <property name="toolTip">
      <string>Sets the experiment's comment</string>
     </property>
     <property name="statusTip">
      <string>comment</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1" colspan="3">
    <widget class="QLineEdit" name="authorEdit">
     <property name="toolTip">
      <string>Sets the author's name</string>
     </property>
     <property name="statusTip">
      <string>Sets the author's name</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1" colspan="3">
    <widget class="QLineEdit" name="nameEdit">
     <property name="toolTip">
      <string>Sets the experiment name</string>
     </property>
     <property name="statusTip">
      <string>Sets the experiment name</string>
     </property>
    </widget>
   </item>
   <item row="4" column="0" colspan="4">
    <widget class="QLabel" name="commentLabel">
     <property name="text">
      <string>Comments:</string>
     </property>
     <property name="buddy">
      <cstring>commentEdit</cstring>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="QLabel" name="familyValueLabel">
     <property name="toolTip">
      <string>Automatically detected family for this experiment</string>
     </property>
     <property name="statusTip">
      <string>Automatically detected family for this experiment</string>
     </property>
     <property name="text">
      <string>undefined</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>tagSizeEdit</tabstop>
  <tabstop>nameEdit</tabstop>
  <tabstop>authorEdit</tabstop>
  <tabstop>commentEdit</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
